<resources>
    <string name="app_name">Virtual Classroom</string>
    <string name="type_new_course_info_here">Type New Course Info Here</string>
    <string name="set_course_days">Set Course Days</string>
    <string name="set_course_hours">Set Course Hours</string>
    <string name="set_course_description">Set Course Description</string>
    <string name="set_student_capacity">Set Student Capacity</string>
    <string name="stop_teaching_this_course">Stop Teaching This Course</string>
    <string name="teach_course">Teach Course</string>
    <string name="course_code">Course code:</string>
    <string name="course_name">Course name:</string>
    <string name="course_days">Course days:</string>
    <string name="course_hours">Course hours:</string>
    <string name="description">Description:</string>
    <string name="capacity">Capacity:</string>
    <string name="instructor">Instructor:</string>
    <string name="course_code_here">Course code here</string>
    <string name="course_name_here">Course name here</string>
    <string name="find_course">Find Course</string>
    <string name="add_course">Add Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="new_course_code_here_edit_only">New course code here (edit only)</string>
    <string name="new_course_name_here_edit_only">New course name here (edit only)</string>
    <string name="delete_course">Delete Course</string>
    <string name="view_all_courses">View All Courses</string>
    <string name="search_for_course">Search For Course</string>
    <string name="view_course_data">View Course Data</string>
    <string name="type_the_name_or_code_of_a_course">Type the name or code of a course</string>
    <string name="instructor_homepage_for">Instructor Homepage for</string>
</resources>