<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".InstructorHomepage">

    <ListView
        android:id="@+id/viewAllCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/allCourses" />

    <Button
        android:id="@+id/allCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_courses"
        android:textColor="@color/white"
        android:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/viewAllCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCourse" />

    <Button
        android:id="@+id/searchBtn"
        android:backgroundTint="#03A9F4"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:text="@string/search_for_course"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/editCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchText" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_the_name_or_code_of_a_course"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseViewer" />

    <Button
        android:id="@+id/editCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_course_data"
        android:textColor="@color/white"
        android:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/allCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBtn" />

    <TableLayout
        android:id="@+id/courseViewer"
        android:layout_width="411dp"
        android:layout_height="236dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="68dp"
        app:layout_constraintTop_toBottomOf="@id/instructorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/course_code" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/course_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/course_days" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/course_hours" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/capacity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/row7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/instructor" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/instructorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructor_homepage_for"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/courseViewer"/>

</androidx.constraintlayout.widget.ConstraintLayout>